# MultiAgenticAI

./: README.md  main.py  pyproject.toml
plaground/: agents.ipynb
